<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apps4you.wellington.convertebitcoin.view.Home"
    tools:showIn="@layout/app_bar_home">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_TelaPrincipal"></com.google.android.gms.ads.AdView>

    <LinearLayout
        android:id="@+id/layoutConversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="52dp">

        <EditText
            android:id="@+id/editTextValorConversion"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/mensagem_editText"
            android:inputType="numberDecimal"
            android:textColorLink="?android:attr/editTextColor"
            android:theme="@style/Base.V12.Widget.AppCompat.EditText" />

        <Button
            android:id="@+id/buttonConversion"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Converter"
            android:text="@string/title_button_converter"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/layoutResultConversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LayoutLabelUltimaConversao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUltimaconversao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/textView_title_ultima_conversao"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutLabelBtc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewBtc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_title_bitcoin"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textViewBrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_title_real"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textViewUsd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_title_dolar"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutDadosBtc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewValorInserido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00"
                android:textAlignment="center"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textViewValorConversao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00"
                android:textAlignment="center"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textViewValorConversaoUSD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00"
                android:textAlignment="center"
                android:visibility="visible" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LayoutListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textView_title_mercado_moedas"
                android:textAlignment="center"
                android:textStyle="bold"
                android:theme="@style/AppTheme" />

            <ListView
                android:id="@+id/listViewOthersConversions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>