<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewCriptoMoeda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@mipmap/ic_launcher_final" />

        <LinearLayout
            android:id="@+id/layoutdados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutValores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewValorNomeCriptomoeda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="nome"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewLabelValorBtc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/PreçoBitcoin" />


                <TextView
                    android:id="@+id/textViewLabelValorBrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/preçoUnitarioBitcoin" />

                <TextView
                    android:id="@+id/textViewLabelValorUsd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/preçoUnitarioDolar" />


                <TextView
                    android:id="@+id/textViewLabelValorPercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/preçoVariacao" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layouttitulos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewValorNomeCriptomoedaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/textViewValorBtc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="1.0"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewValorBrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="37164.04912"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewValorUsd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="11425.6"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewValorPercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="0.2"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="vertical">-->

            <!--<LinearLayout-->
                <!--android:id="@+id/LayoutDadosBitcoin0"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:id="@+id/textViewValorNomeCriptomoeda"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="nome"-->
                    <!--android:textAlignment="center"-->
                    <!--android:textStyle="bold" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:id="@+id/LayoutDadosBitcoin3"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:id="@+id/textViewLabelValorBtc"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="@string/PreçoBitcoin" />-->

                <!--<TextView-->
                    <!--android:id="@+id/textViewValorBtc"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="1.0"-->
                    <!--android:textAlignment="center"-->
                    <!--android:textStyle="bold" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:id="@+id/LayoutDadosBitcoin1"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:id="@+id/textViewLabelValorBrl"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="@string/preçoUnitarioBitcoin" />-->

                <!--<TextView-->
                    <!--android:id="@+id/textViewValorBrl"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="37164.04912"-->
                    <!--android:textAlignment="center"-->
                    <!--android:textStyle="bold" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:id="@+id/LayoutDadosBitcoin2"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:id="@+id/textViewLabelValorUsd"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="@string/preçoUnitarioDolar" />-->

                <!--<TextView-->
                    <!--android:id="@+id/textViewValorUsd"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="11425.6"-->
                    <!--android:textAlignment="center"-->
                    <!--android:textStyle="bold" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:id="@+id/LayoutDadosBitcoin4"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:id="@+id/textViewLabelValorPercent"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="5dp"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="@string/preçoVariacao" />-->

                <!--<TextView-->
                    <!--android:id="@+id/textViewValorPercent"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="5dp"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:text="0.2"-->
                    <!--android:textAlignment="center"-->
                    <!--android:textStyle="bold" />-->

            <!--</LinearLayout>-->
        <!--</LinearLayout>-->


    </LinearLayout>


</LinearLayout>

